# bolide-powerd

./: .gitignore  CMakeLists.txt  README.md
data/: bolide-powerd.service  default-profiles.json  org.bolideos.powerd.conf
src/: CMakeLists.txt  automationengine.cpp  batterymonitor.cpp  batterymonitor.h  common.h  dbusinterface.cpp  dbusinterface.h  healthmonitor.cpp  healthmonitor.h  healthstore.cpp  healthstore.h  main.cpp  microcoresync.cpp  microcoresync.h  org.bolideos.powerd.xml  profilemodel.cpp  profilemodel.h  radiocontroller.cpp  radiocontroller.h  sensorcontroller.h  sensorfwbackend.cpp  sensorfwbackend.h  sysfsbackend.cpp  sysfsbackend.h  systemcontroller.cpp  systemcontroller.h
tests/: CMakeLists.txt  tst_automationengine.cpp  tst_batterymonitor.cpp  tst_dbusinterface.cpp  tst_profilemanager.cpp  tst_profilemodel.cpp
